--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node-cron": "^3.0.11",
+    "@types/mongodb": "^4.0.7"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@types/mongodb": "^4.0.7",
     "mongodb": "^6.7.0",
     "mqtt": "^5.5.3",
-    "zod": "^3.23.8"
+    "node-cron": "^3.0.3"
+  },
+  "scripts": {
+    "start": "bun run src/server.ts"
   }
 }
